tdf#146941 qt: QtFilePicker::finished needs SolarMutexGuard

Change-Id: I4165c72ddd6370c8fe7faf55f9db831359f6f8a5
Reviewed-on: https://gerrit.libreoffice.org/c/core/+/128923
Tested-by: Jenkins
Reviewed-by: Michael Weghorn <m.weghorn@posteo.de>